@@ -25,7 +25,7 @@
     column_tag ||= :td
     error_tag ||= :tr
     error_inner_tag ||= :td
-    default_col_class = []
+    default_col_class = ['form-element']
     flatten ||= false
   end
   index ||= form_association_record_counter ||= nil
