@@ -22,9 +22,7 @@ module ActiveScaffold
       ##
 
       def active_scaffold_controller_for(klass)
-        ActiveScaffold::Registry.cache :as_controller, klass do
-          controller.class.active_scaffold_controller_for(klass)
-        end
+        controller.class.active_scaffold_controller_for(klass)
       end
 
       ##
