@@ -11,6 +11,7 @@
 - Update code for tabs to work with bootstrap 5
 - Add ActiveScaffold.setup_callbacks array, so functions can be added to be called when ActiveScaffold.setup is called (form open, page load)
 - Add add_new_link to config.nested, adding a link to create form on an association, refreshing this record instead of adding new row in the list
+- Support hashes in update_columns, keys are association names or :__root__ to refresh fields on subforms or at top of the form, values are list of columns or nested hashes.
 
 = 4-1-stable
 - Fix dirty attributes on refresh_field action, record is built on unsaved instance copying attributes, but it reports only changed attributes from the form now
